# obsidian-icloud-local-sync

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  requirements.txt  sync.py
src/obsidian_sync/: __init__.py  __main__.py  config.py  disk_io.py  duplicates.py  hasher.py  icloud_status.py  logger.py  sync_engine.py
src/obsidian_sync/tests/: conftest.py  pytest.ini  test_config.py  test_disk_io.py  test_duplicates.py  test_hasher.py  test_icloud_status.py  test_logger.py  test_sync_engine.py
